--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 8.11
-  maximum: 9.05
-  average: 8.73
-  UpdateDay: '2022-06-09T06:34:10.906192'
+  minimum: 6.98
+  maximum: 8.03
+  average: 7.34
+  UpdateDay: '2022-06-09T15:31:27.656991'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50854
+  Rank: 50855
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -63,19 +63,19 @@ proxies:
   Rank: 45274
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.35
-  maximum: 123.89
-  average: 78.3
-  UpdateDay: '2022-06-09T12:31:20.699158'
+  minimum: 11.49
+  maximum: 41.38
+  average: 24.49
+  UpdateDay: '2022-06-09T15:31:29.702054'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 36583
+  Rank: 36584
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,27 +85,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 97.65
-  maximum: 291.15
-  average: 181.58
-  UpdateDay: '2022-06-09T12:32:15.750164'
+  minimum: 102.07
+  maximum: 194.46
+  average: 156.53
+  UpdateDay: '2022-06-09T15:31:30.266018'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 35275
+  Rank: 35324
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 84.58
-  maximum: 91.28
-  average: 88.02
-  UpdateDay: '2022-06-09T12:31:20.716757'
+  minimum: 87.34
+  maximum: 106.76
+  average: 96.55
+  UpdateDay: '2022-06-09T15:31:30.088721'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 29423
+  Rank: 29424
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.45
-  maximum: 49.39
-  average: 42.93
-  UpdateDay: '2022-06-09T12:32:15.341476'
+  minimum: 41.33
+  maximum: 46.91
+  average: 45.05
+  UpdateDay: '2022-06-09T15:31:29.924793'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 26019
+  Rank: 26020
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -186,12 +186,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 72.42
-  maximum: 73.6
-  average: 73.1
-  UpdateDay: '2022-06-09T12:32:15.429343'
+  minimum: 71.14
+  maximum: 125.85
+  average: 97.08
+  UpdateDay: '2022-06-09T15:31:30.264032'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 24693
+  Rank: 24694
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.71
-  maximum: 49.17
-  average: 45.66
-  UpdateDay: '2022-06-09T12:32:15.355917'
+  minimum: 39.91
+  maximum: 51.48
+  average: 45.62
+  UpdateDay: '2022-06-09T15:31:30.190351'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 23288
+  Rank: 23377
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -248,19 +248,19 @@ proxies:
   Rank: 21784
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: UiLPqefVfielqkDjEwBV
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.55
-  maximum: 67.08
-  average: 52.47
-  UpdateDay: '2022-06-09T12:31:20.696001'
+  minimum: 40.87
+  maximum: 48.24
+  average: 43.44
+  UpdateDay: '2022-06-09T15:31:29.750162'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 19007
+  Rank: 19008
 - alterId: 0
   cipher: auto
   http-opts:
@@ -306,31 +306,31 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.24
-  maximum: 65.03
-  average: 56.25
-  UpdateDay: '2022-06-09T12:32:15.374065'
+  minimum: 39.49
+  maximum: 46.91
+  average: 42.31
+  UpdateDay: '2022-06-09T15:31:29.912894'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 15776
+  Rank: 15823
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.96
-  maximum: 1062.23
-  average: 379.65
-  UpdateDay: '2022-06-09T12:32:16.344843'
+  minimum: 39.37
+  maximum: 1062.47
+  average: 382.97
+  UpdateDay: '2022-06-09T15:31:30.921929'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 14703
+  Rank: 14740
 proxy-groups:
 - name: PG-default
   type: fallback
