--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.21
-  maximum: 8.07
-  average: 7.75
-  UpdateDay: '2022-06-09T18:31:39.675649'
+  minimum: 7.24
+  maximum: 8.57
+  average: 7.88
+  UpdateDay: '2022-06-10T00:32:28.020879'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50857
+  Rank: 50858
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -63,34 +63,34 @@ proxies:
   Rank: 45257
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 8.52
-  maximum: 49.79
-  average: 34.02
-  UpdateDay: '2022-06-09T21:30:52.714226'
+  minimum: 40.84
+  maximum: 61.47
+  average: 47.89
+  UpdateDay: '2022-06-10T00:31:34.081335'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 36666
+  Rank: 36667
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 127.85
-  maximum: 168.38
-  average: 152.34
-  UpdateDay: '2022-06-09T21:30:55.062051'
+  minimum: 111.43
+  maximum: 144.21
+  average: 127.29
+  UpdateDay: '2022-06-10T00:31:34.288814'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 35396
+  Rank: 35443
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,12 +100,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 103.59
-  maximum: 120.52
-  average: 111.58
-  UpdateDay: '2022-06-09T21:30:54.957509'
+  minimum: 87.22
+  maximum: 102.42
+  average: 95.93
+  UpdateDay: '2022-06-10T00:32:28.306393'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 29427
+  Rank: 29429
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 46.48
-  maximum: 63.67
-  average: 53.22
-  UpdateDay: '2022-06-09T21:30:54.683737'
+  minimum: 38.4
+  maximum: 80.9
+  average: 52.76
+  UpdateDay: '2022-06-10T00:32:28.177828'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 25972
+  Rank: 26019
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -182,16 +182,16 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 70.92
-  maximum: 72.85
-  average: 72.13
-  UpdateDay: '2022-06-09T21:30:54.938610'
+  minimum: 79.97
+  maximum: 97.9
+  average: 90.44
+  UpdateDay: '2022-06-10T00:32:28.296751'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 24777
+  Rank: 24780
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 46.66
-  maximum: 57.32
-  average: 51.86
-  UpdateDay: '2022-06-09T18:31:39.735478'
+  minimum: 40.08
+  maximum: 48.65
+  average: 44.31
+  UpdateDay: '2022-06-10T00:32:10.154373'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 23764
+  Rank: 23765
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -255,12 +255,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.33
-  maximum: 45.9
-  average: 43.31
-  UpdateDay: '2022-06-09T21:30:52.711022'
+  minimum: 39.31
+  maximum: 39.95
+  average: 39.66
+  UpdateDay: '2022-06-10T00:32:28.130315'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 19068
+  Rank: 19070
 - alterId: 0
   cipher: auto
   http-opts:
@@ -306,31 +306,31 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.47
-  maximum: 68.64
-  average: 56.76
-  UpdateDay: '2022-06-09T21:30:54.719684'
+  minimum: 77.34
+  maximum: 1075.11
+  average: 410.07
+  UpdateDay: '2022-06-10T00:32:29.249645'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 15892
+  Rank: 15895
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.73
-  maximum: 1046.57
-  average: 379.28
-  UpdateDay: '2022-06-09T21:30:55.694073'
+  minimum: 59.13
+  maximum: 1058.79
+  average: 724.27
+  UpdateDay: '2022-06-10T00:32:30.187929'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 14854
+  Rank: 14858
 proxy-groups:
 - name: PG-default
   type: fallback
